# codeforge

./: .codeforge_state.json  .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  FINAL_CERTIFICATION.md  FINAL_VERIFICATION.md  Procfile  README.md  STATUS_REPORT.md  phase6.txt  pyproject.toml  railway.json  render.yaml  run.py
agents/architect/: README.md
agents/developer/: README.md
agents/manager/: README.md
agents/qa/: README.md
config/: __init__.py  models.py  paths.py  settings.py
data/chromadb/: chroma.sqlite3
docs/: AGENT_OS.md  API.md  ARCHITECTURE.md  KNOWLEDGE_GRAPH.md  architecture.md  coding_rules.md  progress.md  project_conventions.md  qa_report.md  roadmap.md  vision.md
docs/adr/: 001-initial-architecture.md  002-first-agents.md  003-pipeline-memory-git.md  004-todo-app-project.md  005-multi-project-platform.md  006-production-ready.md  007-easytrade-ecommerce.md  011-codeforge-x-architecture.md  012-canonical-architecture.md  013-src-core-architectural-status.md
docs/projects/: page_landing_1115.md  page_landing_startup_3_services_3638.md  todo_app.md
docs/reports/: audit-report.md  baseline-report.md  codeforge-x-roadmap.md  codeforge-x-validation.md  deployment-readiness.md  easytrade-001.md  final-platform-assessment.md  migration-guide.md  page_landing_1115-build.md  page_landing_startup_3_services_3638-build.md  phase-gate-summary.md  phase0-forensic-discovery.md  phase1-execution-plane.md  phase2-repository-intelligence.md  phase3-code-intelligence.md  phase4-knowledge-system.md  phase5-enterprise-orchestration.md  phase6-engineering-intelligence.md  phase7-autonomous-software-company.md  phase8-strategic-intelligence.md  platform-audit.md  platform-evaluation.md  production-readiness.md  rebuild-comparison.md  regression-tests.md  root-cause-analysis.md  security-report-easytrade.md  security-report-taskflow.md  stress-test-report.md  task-001.md  task-002.md  task-003.md  weekly-summary-latest.md
docs/security/: TERMINAL_CAPABILITY_SECURITY_REVIEW.md
gate_a_canonical/: gate_a_results.json  hello_canonical.txt  production_evidence_records.json
gate_a_evidence/: evidence_records.json  hello_world_gate_a.txt
memory/: README.md
projects/: .projects.json
projects/page_landing_1115/: index.html
projects/page_landing_startup_3_services_3638/: index.html
projects/todo_app/: index.html  script.js
src/: agents.py  app.py  build.py  build_engine.py  build_result.py  codeforge.py  diagnostics.py  event_logger.py  git_manager.py  health.py  logger.py  memory.py  model_router.py  path_service.py  pipeline.py  project_manager.py  state.py  summarizer.py  version.py
src/Core/: __init__.py  autonomous_software_company.py  builtin_tools.py  capability.py  code_intelligence.py  deployment.py  engineering_intelligence.py  enterprise_engineering.py  event_bus.py  evidence.py  execution.py  knowledge_graph.py  knowledge_system.py  memory.py  plugin.py  policy.py  repository_intelligence.py  sdk.py  secrets.py  strategic_intelligence.py  workspace.py
src/Core/tools/: __init__.py  files.py  git_tool.py  terminal.py  test_tool.py
src/model_provider/: README.md  __init__.py  base.py  capability_requirements.py  gemini_provider.py  mock_provider.py  openai_provider.py  registry.py
src/storage/: __init__.py  chroma_storage.py  docs_storage.py  storage.py  storage_router.py
static/css/: style.css
static/js/: app.js
supabase/: schema.sql
supabase/functions/codeforge-engine/: index.ts
templates/: index.html
tests/: test_adr_memory_phase7.py  test_agent_os.py  test_autonomous_software_company_phase8.py  test_capability_phase5.py  test_code_intelligence_phase4.py  test_codeforge_core_bridge.py  test_engineering_intelligence_phase7.py  test_enterprise_engineering_phase6.py  test_execution_phase6.py  test_gate_a_canonical.py  test_knowledge_graph_phase8.py  test_knowledge_system_phase5.py  test_paths_phase3.py  test_phase2_gates.py  test_phase_api_routes.py  test_providers_phase4.py  test_repository_intelligence_phase3.py  test_security.py  test_strategic_intelligence_phase9.py
web/: .env.example  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: AgentBar.tsx  AgentsPanel.tsx  AuthScreen.tsx  ChatPanel.tsx  FilesPanel.tsx  PreviewPanel.tsx  SecretsPanel.tsx  Sidebar.tsx  StatusBar.tsx  StepTracker.tsx
web/src/lib/: auth.tsx  engine.ts  icons.tsx  storage.ts  supabase.ts
workspace/: index.html
workspace/projects/easytrade/: 404.html  cart.html  confirmation.html  index.html  product.html
workspace/projects/easytrade/css/: style.css
workspace/projects/easytrade/js/: cart.js  products.js
workspace/projects/taskflow/: dashboard.html  tasks.html  team.html
workspace/projects/taskflow/css/: dashboard.css  style.css
workspace/projects/taskflow/data/: tasks.json
workspace/projects/taskflow/js/: app.js  reports.js  tasks.js  utils.js
workspace/projects/taskflow_v2/: 404.html  dashboard.html  index.html  login.html  reports.html  settings.html
workspace/projects/taskflow_v2/css/: dashboard.css  style.css
workspace/projects/taskflow_v2/css/components/: animations.css  buttons.css  cards.css  forms.css
workspace/projects/taskflow_v2/data/: users.json
workspace/projects/taskflow_v2/js/: auth.js  team.js
workspace/projects/todo_app/: style.css
